--- a/stronaapple/style.css
+++ b/stronaapple/style.css
@@ -3,30 +3,35 @@
     padding: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-.globalnav{
-    height: 5%;
-    width: 100%;
-    background-color: #2e2e2e;
-}
-.globalnav-list{
-    max-width: 100%;
-    max-height: 5%;
-    text-align: center;
-    justify-content: center;
-    list-style: none;
+nav{
+    background-color: rgb(63, 62, 62);
+    color: aliceblue;
+    height: 40px;
     display: flex;
-    font-size: 10px;
-    color: #b9b2b2;
+    align-items: center;
+    font-size: 0.8rem;
+    font-weight: 300;
 }
-.globolnav-list-img{
-    max-width: 2%;
-    max-height: 2%;
+nav ul{
+    width: 1024px;
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.globalnav-list > div{
-    width: 8%;
-    height: 3%;
-    font-size: 10px;
-    color: #b9b2b2;
+nav ul li{
+    list-style: none;
+    margin-left: 15px;
+    margin-right: 15px;
+    width: max-content;
+}
+.logoapple{
+    height: 20px;
+}
+.navicon{
+    height: 13px;
 }
 .section1{
     height: 730px;
