--- a/stronaapple/style.css
+++ b/stronaapple/style.css
@@ -22,6 +22,7 @@ nav ul{
     justify-content: center;
 }
 nav ul li{
+    padding: 20px 10px;
     list-style: none;
     margin-left: 15px;
     margin-right: 15px;
@@ -108,4 +109,44 @@ nav ul li{
     background-repeat: no-repeat;
     color: white;
     justify-content: center;
+}
+.herohref a{
+    text-decoration: none;
+    color: #2997ff;
+}
+.herohref a:hover{
+    text-decoration: underline;
+}
+footer{
+    background-color: #f5f5f7;
+    font-size: 12px;
+    width: 100%;
+    z-index: 1;
+}
+.stopka{
+    margin-left: auto;
+    margin-right: auto;
+    color: #6e6e73;
+    font-size: 12px;
+    width: 1024px;
+}
+.stopkacontent{
+    font-size: 12px;
+    display: flex;
+    flex-wrap: nowrap;
+    padding-top: 20px;
+}
+.stopkacolumn{
+    width: 20%;  
+    margin: 0;
+    padding: 0;
+}
+.stopkacontent ul{
+    margin-right: 20px;
+    list-style: none;
+    padding: 0; 
+}
+.stopkacontent li{ 
+    display: block;
+    margin-bottom: 0.8em;
 }
